# XChip

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdlsound.cpp
XChip/: CMakeLists.txt
XChip/XChipJNI/: .cproject  .project
XChip/XChipJNI/jni/: Android.mk
XChip/dependencies/SDL2/ANDROID/include/: SDL2
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/: SDL.o.d  SDL_assert.o.d  SDL_error.o.d  SDL_hints.o.d  SDL_log.o.d
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/atomic/: SDL_atomic.o.d  SDL_spinlock.o.d
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/audio/: SDL_audio.o.d  SDL_audiocvt.o.d  SDL_audiodev.o.d  SDL_audiotypecvt.o.d  SDL_mixer.o.d  SDL_wave.o.d
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/cpuinfo/: SDL_cpuinfo.o.d
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/dynapi/: SDL_dynapi.o.d
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/events/: SDL_clipboardevents.o.d  SDL_dropevents.o.d  SDL_events.o.d  SDL_gesture.o.d  SDL_keyboard.o.d  SDL_mouse.o.d  SDL_quit.o.d  SDL_touch.o.d  SDL_windowevents.o.d
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/file/: SDL_rwops.o.d
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/haptic/: SDL_haptic.o.d
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/joystick/: SDL_gamecontroller.o.d  SDL_joystick.o.d
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/power/: SDL_power.o.d
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/render/: SDL_d3dmath.o.d  SDL_render.o.d  SDL_yuv_mmx.o.d  SDL_yuv_sw.o.d
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/stdlib/: SDL_getenv.o.d  SDL_iconv.o.d  SDL_malloc.o.d  SDL_qsort.o.d  SDL_stdlib.o.d  SDL_string.o.d
XChip/dependencies/SDL2/ANDROID/lib/armeabi-v7a/objs/SDL2/src/test/: SDL_test_assert.o.d  SDL_test_common.o.d  SDL_test_compare.o.d  SDL_test_crc32.o.d  SDL_test_font.o.d  SDL_test_fuzzer.o.d  SDL_test_harness.o.d  SDL_test_imageBlit.o.d  (+7 more)
XChip/dependencies/SDL2/ANDROID/lib/armeabi/objs/SDL2/src/: SDL.o.d  SDL_assert.o.d  SDL_error.o.d  SDL_hints.o.d  SDL_log.o.d
XChip/dependencies/SDL2/ANDROID/lib/x86/objs/SDL2/src/: SDL.o.d  SDL_assert.o.d  SDL_error.o.d  SDL_hints.o.d  SDL_log.o.d
XChip/dependencies/SDL2/WIN/: README.md
XChip/dependencies/SDL2/WIN/include/: README.md
XChip/dependencies/SDL2/include/: README.md
XChip/dependencies/SDL2_WIN/include/: .gitignore  README.md
XChip/dependencies/wxWidgets/WIN/: README.md
XChip/dependencies/wxWidgets/WIN/include/: .gitignore  README.md
XChip/include/WXChip/: Dialog.h  Main.h  MainWindow.h  MessageBox.h  SaveList.h  SettingsWindow.h
XChip/include/XChip/: Core.h  Cpu.h  CpuManager.h  Emulator.h  Fonts.h  Instructions.h  Interfaces.h  Plugins.h  Utility.h  Utils.h  XChip.h
XChip/include/XChip/Core/: Cpu.h  CpuManager.h  Emulator.h  Fonts.h  Instructions.h
XChip/include/XChip/Interfaces/: iInput.h  iMediaInterface.h  iRender.h  iSound.h
XChip/include/XChip/Media/: Interfaces.h  SDLMedia.h  UniqueMediaPlugin.h  iInput.h  iMediaInterface.h  iMediaPlugin.h  iRender.h  iSound.h
XChip/include/XChip/Media/SDLMedia/: SdlInput.h  SdlRender.h  SdlSound.h  SdlSystem.h
XChip/include/XChip/Media/WXMedia/: WXInput.h  WXRender.h
XChip/include/XChip/Plugins/: Plugins.h  UniquePlugin.h  iInput.h  iPlugin.h  iRender.h  iSound.h
XChip/include/XChip/Plugins/SDLPlugins/: SdlAndroidInput.h  SdlInput.h  SdlRender.h  SdlSound.h
XChip/include/XChip/Plugins/SFMLPlugins/: SfmlInput.h
XChip/include/XChip/SDL/: SdlAudioWrap.h  SdlInput.h  SdlMedia.h  SdlRender.h  SdlSound.h
XChip/include/XChip/SDL_MEDIA/: SdlAudioDevice.h  SdlInput.h  SdlMedia.h  SdlRender.h  SdlSound.h  SdlSystem.h
XChip/include/XChip/SDL_MEDIA/EXTERN_HEADERS/: .gitignore  README.md
XChip/include/XChip/Utility/: Alloc.h  Assert.h  BaseTraits.h  CliOpts.h  Color.h  DLoader.h  Log.h  Memory.h  Plugin.h  Process.h  Resolution.h  ScopeExit.h  StdintDef.h  Timer.h  Traits.h  Utility.h  Vector.h  Vector2.h  test.cpp
XChip/include/XChip/Utils/: Alloc.h  Assert.h  BaseTraits.h  CliOpts.h  Color.h  DLoader.h  Ints.h  Log.h  Memory.h  Process.h  RWrap.h  ScopeExit.h  Timer.h  Traits.h  Vector.h  Vector2.h
XChip/include/wXChip/: EmulatorThread.h  GLWindow.h  MainWindow.h  Process.h  RunEmulator.h  SaveList.h  Settings.h  SettingsWindow.h  wxInput.h
XChip/src/: CMakeLists.txt
XChip/src/Core/: CMakeLists.txt  CpuManager.cpp  Emulator.cpp  Fonts.cpp  Instructions.cpp
XChip/src/EmuApp/: CMakeLists.txt  EmuApp.cpp
XChip/src/GUI/wXChip/: main.cpp
XChip/src/GUI/wXChip/include/: savelist.h
XChip/src/Media/: CMakeLists.txt
XChip/src/Media/SDLMedia/: CMakeLists.txt  SdlInput.cpp  SdlRender.cpp  SdlSound.cpp  SdlSystem.cpp
XChip/src/Media/WXMedia/: CMakeLists.txt  WXInput.cpp  WXRender.cpp
XChip/src/Plugins/: CMakeLists.txt
XChip/src/Plugins/SDLPlugins/: CMakeLists.txt  SdlAndroidInput.cpp  SdlInput.cpp  SdlRender.cpp  SdlSound.cpp
XChip/src/Plugins/SFMLPlugins/: CMakeLists.txt  SfmlInput.cpp
XChip/src/SDL/: CMakeLists.txt  SdlAudioWrap.cpp  SdlEvents.cpp  SdlInput.cpp  SdlMedia.cpp  SdlRender.cpp  SdlSound.cpp
XChip/src/SDL_MEDIA/: CMakeLists.txt  SdlAudioDevice.cpp  SdlInput.cpp  SdlMedia.cpp  SdlRender.cpp  SdlSound.cpp  SdlSystem.cpp
XChip/src/Test/: CMakeLists.txt  test.cpp
XChip/src/Utility/: Alloc.cpp  CMakeLists.txt  CliOpts.cpp  DLoader.cpp  Log.cpp  Plugin.cpp  Process.cpp
XChip/src/Utils/: Alloc.cpp  CMakeLists.txt  CliOpts.cpp  DLoader.cpp  Log.cpp  Process.cpp
XChip/src/WXChip/: CMakeLists.txt  Dialog.cpp  EmulatorApp.cpp  Main.cpp  MainWindow.cpp  SaveList.cpp  SettingsWindow.cpp
XChip/src/XChip/: CMakeLists.txt  CpuManager.cpp  Emulator.cpp  Fonts.cpp  Instructions.cpp
XChip/src/XChip/Utility/: Alloc.cpp  Timer.cpp
XChip/src/wXChip/: CMakeLists.txt  EmulatorThread.cpp  GLWindow.cpp  MainWindow.cpp  Makefile  Process.cpp  RunEmulator.cpp  SaveList.cpp  Settings.cpp  SettingsWindow.cpp  main.cpp  savelist.cpp  wXChip  wxInput.cpp
(+335 files in other folders)
