project(Core)
cmake_minimum_required(VERSION 2.8)

INCLUDE_DIRECTORIES(${XCHIP_DEFAULT_INCLUDE_PATH})

# CXX_FLAGS
set(CMAKE_CXX_COMPILER "${CXX_COMPILER}")
set(CMAKE_CXX_FLAGS "${CXX_FLAGS}")

file(GLOB_RECURSE CORE_SRC ./*.cpp)
file(GLOB_RECURSE CORE_HEADERS XChip/*.h)


# xchip added
add_library(${PROJECT_NAME} ${CORE_HEADERS} ${CORE_SRC})







