
if( BUILD_EMUAPP OR BUILD_WXCHIP )

	project(EmuApp)
	FILE(GLOB_RECURSE SRC ./*.cpp)
	ADD_EXECUTABLE(${PROJECT_NAME} ${SRC})
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} Utix Core)


	INSTALL(TARGETS EmuApp DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/EmuApp)
	INSTALL(TARGETS EmuApp DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/WXChip/bin)
endif()
