if(${BUILD_TEST} STREQUAL "ON")
	project(XChipTest)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
	add_executable(${PROJECT_NAME} test.cpp)
	target_link_libraries(${PROJECT_NAME} dl Core Utils)
	INSTALL(TARGETS XChipTest DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/Test)
endif()
