project(SFMLPlugins)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")

file(GLOB INPUT_PLUGIN ./SfmlInput.cpp)
file(GLOB_RECURSE HEADERS XChip/*.h)

set(CMAKE_SHARED_LIBRARY_PREFIX "")
set(CMAKE_SHARED_MODULE_PREFIX "")

add_library(XChipSFMLInput SHARED ${HEADERS} ${INPUT_PLUGIN})
target_link_libraries(XChipSFMLInput sfml-window UtilityFPIC)


INSTALL(TARGETS XChipSFMLInput  DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/Plugins/SFMLPlugins)
INSTALL(TARGETS XChipSFMLInput  DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE}/WXChip/bin/plugins)
